k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-tracker
  namespace: live-tracker
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: live-tracker.aooba.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
